plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-core'
	implementation 'org.springframework.security:spring-security-config'
	implementation 'org.springframework.security:spring-security-web'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT API
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // JWT implementation
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT için JSON işleme desteği (Jackson)
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
